devops/hands-on/kubernetes/eks-02-DynamicVolumeProvisionining-and-Ingress/ingress-yaml-files/ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: web-service
              servicePort: 3000
          - path: /load/?(.*)
            backend:
              serviceName: php-apache-service
              servicePort: 80
